; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/extr_mcdi.c_efx_mcdi_rpc_async.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/extr_mcdi.c_efx_mcdi_rpc_async.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @efx_mcdi_rpc_async(%struct.efx_nic* %0, i32 %1, i32* %2, i64 %3, i64 %4, i32* %5, i64 %6) #0 {
  %8 = alloca %struct.efx_nic*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i64, align 8
  store %struct.efx_nic* %0, %struct.efx_nic** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i32* %5, i32** %13, align 8
  store i64 %6, i64* %14, align 8
  %15 = load %struct.efx_nic*, %struct.efx_nic** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i32*, i32** %10, align 8
  %18 = load i64, i64* %11, align 8
  %19 = load i64, i64* %12, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = load i64, i64* %14, align 8
  %22 = call i32 @_efx_mcdi_rpc_async(%struct.efx_nic* %15, i32 %16, i32* %17, i64 %18, i64 %19, i32* %20, i64 %21, i32 0)
  ret i32 %22
}

declare dso_local i32 @_efx_mcdi_rpc_async(%struct.efx_nic*, i32, i32*, i64, i64, i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
